[gd_scene load_steps=2 format=2]

[ext_resource path="res://core/game/GameMenu.gd" type="Script" id=1]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -58.0
margin_right = 85.5
margin_bottom = 58.0

[node name="Resume" type="Button" parent="Buttons"]
margin_right = 171.0
margin_bottom = 20.0
text = "Resume"

[node name="Save" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 171.0
margin_bottom = 44.0
text = "Save"

[node name="Load" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 171.0
margin_bottom = 68.0
text = "Load"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 171.0
margin_bottom = 92.0
text = "Quit game"
[connection signal="pressed" from="Buttons/Resume" to="." method="onResumePressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="onSavePressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="onLoadPressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="onQuitPressed"]
